--- a/project2/index.html
+++ b/project2/index.html
@@ -11,7 +11,7 @@
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
-	<script src="fader.js"></script>
+	<script src="../libraries/fader.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
