--- a/1-cube-webGL/index.html
+++ b/1-cube-webGL/index.html
@@ -5,13 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>project2</title>
-
+	<title>1-cube-webGL</title>
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
-	<script src="../libraries/fader.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
@@ -23,6 +21,7 @@
 		}
 		canvas {
 			margin:auto;
+			/* cursor: none; */
 		}
 	</style>
 </head>
