--- a/2-fade-paint/index.html
+++ b/2-fade-paint/index.html
@@ -5,11 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>project3</title>
+	<title>2-fade-paint</title>
+
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
+	<script src="../libraries/fader.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
