--- a/4-map-color/index.html
+++ b/4-map-color/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>project1</title>
+	<title>4-map-color</title>
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
@@ -21,7 +21,6 @@
 		}
 		canvas {
 			margin:auto;
-			/* cursor: none; */
 		}
 	</style>
 </head>
