--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-"Hello World!" 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Pick p5 project</title>
+
+	<style>
+		body {
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      margin:0;
+			margin-left:45px;
+			padding:0;
+			overflow: hidden;
+      background-color: beige;
+		}
+		canvas {
+			margin:auto;
+		}
+    .sidebar {
+      position: absolute;
+      width: 45px;
+      height: 100%;
+      min-height: 100px;
+      transform: translateX(-45px);
+      background-color:#f5f5f5;
+      box-sizing: content-box;
+      border-right: 1px solid hsla(0, 79%, 72%, 0.2);
+    }
+    .star {
+      position: absolute;
+      right: 4px;
+      top: 10px;
+      padding: 1px 6px;
+      background-color: transparent;
+      border: none;
+    }
+    .star:focus {
+      outline:none;
+    }
+    .star img {
+      width: 24px;
+    }
+    .mainbody {
+      width: 100%;
+      background-color: #f5f5f5;
+      height: 100vh;
+      overflow-x: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .title {
+      margin-top: 20vh;
+      transform: translateX(-20vw);
+      color: #3a3a3a;
+    }
+    .list {
+      list-style: none;
+      transform: translateX(-15vw);
+    }
+    .list li {
+      padding: 12px;
+    }
+    .list li a {
+      text-decoration: none;
+      justify-content: left;
+      font-size: 24px;
+      padding: 10px;
+      color: #818181;
+      border-radius: 2px;
+    }
+    .list li a:hover {
+      background-color: #62b6cf5b;
+    }
+	</style>
+</head>
+<body>
+  <div class="sidebar">
+    <button class="star">
+      <a href="/index.html">
+        <img src="/assets/star.png" alt="Home">
+      </a>
+    </button>
+  </div>
+
+  <div class="mainbody">
+    <h1 class="title">Le <span>p5.js</span></h1>
+    <ul class="list">
+      <li><a href="./1-cube-webGL/">Cube in WebGL</a></li>
+      <li><a href="./2-fade-paint/">Fading Paint</a></li>
+      <li><a href="./3-noise-symmetry/">Noise in Symmetry</a></li>
+      <li><a href="./4-map-color/">Mapping to Color</a></li>
+    </ul>
+  </div>
+</body>
+</html>
