--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
   <div class="mainbody">
     <h1 class="title">Le <span>p5.js</span></h1>
     <ul class="list">
-      <li><a href="./1-cube-webGL/">Cube in WebGL</a></li>
-      <li><a href="./2-fade-paint/">Fading Paint</a></li>
-      <li><a href="./3-noise-symmetry/">Noise in Symmetry</a></li>
-      <li><a href="./4-map-color/">Mapping to Color</a></li>
+      <li><a href="./1-cube-webGL/index.html">Cube in WebGL</a></li>
+      <li><a href="./2-fade-paint/index.html">Fading Paint</a></li>
+      <li><a href="./3-noise-symmetry/index.html">Noise in Symmetry</a></li>
+      <li><a href="./4-map-color/index.html">Mapping to Color</a></li>
     </ul>
   </div>
 </body>
