dynamic home page experiment

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       <li><a href="./3-noise-symmetry/index.html">Noise in Symmetry</a></li>
       <li><a href="./4-map-color/index.html">Mapping to Color</a></li>
     </ul>
+    <button onclick='load()'>load</button>
   </div>
+  <script src="../libraries/p5.js"></script>
+	<script src="../libraries/p5.dom.js"></script>
+	<script src="../libraries/p5.sound.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
