--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     </ul>
     <button onclick='load()'>load</button>
   </div>
-  <script src="../libraries/p5.js"></script>
-	<script src="../libraries/p5.dom.js"></script>
-	<script src="../libraries/p5.sound.js"></script>
+  <script src="./libraries/p5.js"></script>
+	<script src="./libraries/p5.dom.js"></script>
+	<script src="./libraries/p5.sound.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
