--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
       width: 24px;
     }
     .mainbody {
-      width: 100%;
-      background-color: #f5f5f5;
+			position: absolute;
+      width: calc(100% - 46px);
+			left: 46px;
+			/* take side nav + 1 px border */
+      background-color: transparent;
       height: 100vh;
       overflow-x: auto;
       display: flex;
@@ -53,14 +56,22 @@
       justify-content: flex-start;
       align-items: center;
     }
-    .title {
+    .display {
       margin-top: 20vh;
       transform: translateX(-20vw);
-      color: #3a3a3a;
+			background-color: rgb(245,245,245);
+			border-radius: 5px;
+			padding: 0 30px 25px;
+			min-width: 350px;
+			max-height: 600px;
+			box-shadow: 0 0 30px 0 white;
     }
+		.title {
+			color: #3a3a3a;
+			color: hsl(332, 100%, 50%);
+		}
     .list {
       list-style: none;
-      transform: translateX(-15vw);
     }
     .list li {
       padding: 12px;
@@ -74,7 +85,7 @@
       border-radius: 2px;
     }
     .list li a:hover {
-      background-color: #62b6cf5b;
+	      color: rgba(205,0,120,0.8);
     }
 	</style>
 </head>
@@ -86,16 +97,20 @@
       </a>
     </button>
   </div>
-
   <div class="mainbody">
-    <h1 class="title">Le <span>p5.js</span></h1>
-    <ul class="list">
-      <li><a href="./1-cube-webGL/index.html">Cube in WebGL</a></li>
-      <li><a href="./2-fade-paint/index.html">Fading Paint</a></li>
-      <li><a href="./3-noise-symmetry/index.html">Noise in Symmetry</a></li>
-      <li><a href="./4-map-color/index.html">Mapping to Color</a></li>
-    </ul>
+		<div class="display">
+			<h1 class="title">Bonbons <span>p5.js</span></h1>
+			<ul class="list">
+				<li><a href="./1-cube-webGL/index.html">Cube in WebGL</a></li>
+				<li><a href="./2-fade-paint/index.html">Fading Paint</a></li>
+				<li><a href="./3-noise-symmetry/index.html">Noise in Symmetry</a></li>
+				<li><a href="./4-map-color/index.html">Mapping to Color</a></li>
+			</ul>
+		</div>
   </div>
+	<script src="./libraries/p5.js"></script>
+	<script src="./libraries/p5.dom.js"></script>
+	<script src="./libraries/p5.sound.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
