--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			padding: 0 30px 25px;
 			min-width: 350px;
 			max-height: 600px;
-			box-shadow: 0 0 30px 0 white;
+			/* box-shadow: 0 0 10px 0 white; */
     }
 		.title {
 			color: #3a3a3a;
