--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				<li><a href="./4-map-color/index.html">Mapping to Color</a></li>
         <li><a href="./5-tiles-1/index.html">Tile World <small>no. 1</small></a></li>
 				<li><a href="./6-tiles-2/index.html">Tile World <small>no. 2</small></a></li>        
+				<li><a href="./7-tiles-3/index.html">Tile World <small>no. 3</small></a></li>        
 			</ul>
 		</div>
   </div>
