Add to graph optimized, using shock overlay. Refactoring.

--- a/10-the-force-1/index.html
+++ b/10-the-force-1/index.html
@@ -26,6 +26,7 @@
 			justify-content: center;
 			height: 100vh;
    		position: relative;
+			background-color: hsla(220, 30%, 10%, 1);
 		}
 
 		canvas {
