--- a/10-the-force-1/index.html
+++ b/10-the-force-1/index.html
@@ -26,11 +26,13 @@
 			justify-content: center;
 			height: 100vh;
    		position: relative;
-			background-color: hsla(220, 30%, 10%, 1);
+			background: rgb(252, 233, 151);
 		}
 
 		canvas {
 			margin:auto;
+			box-sizing: border-box;
+			border: 1px solid rgb(46, 92, 92);
 		}
 	</style>
 </head>
