particles sketch added. minor optimizations

--- a/10-the-force-1/index.html
+++ b/10-the-force-1/index.html
@@ -16,7 +16,8 @@
 
 	<style>
 		:root {
-			--col-bg: rgb(250, 173, 110);
+			/* --col-bg: rgb(250, 173, 110); */
+			--col-bg: hsl(37, 93%, 71%);
 			--col-controls: rgb(0, 61, 46);
 		}
 
