--- a/9-times-table-circle/index.html
+++ b/9-times-table-circle/index.html
@@ -165,7 +165,7 @@
 					<td>&#10074; &#10074; &nbsp;/&nbsp; &#9658;</td>
 					<td><strong>
 						<!-- <small class="normal-text">Press </small> -->
-						Space
+						Press Space
 					</strong></td>
 				</tr>
 			</table>
@@ -219,7 +219,7 @@
 			<hr>		
 			<div class="checkbox">
 				<input type="checkbox" name="numbers" id="show-numbers-cb" onchange="toggleCheckbox(event)">
-				<label for="numbers">Show numbers</label>
+				<label for="numbers">Show numbers (small density)</label>
 			</div>
 		</div>
 	</div>
