--- a/18-tiles-11/index.html
+++ b/18-tiles-11/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>15-tiles-8</title>
+	<title>18-tiles-11</title>
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
@@ -18,7 +18,7 @@
 
 	<style>
 		:root {
-			--col-controls: rgb(170, 230, 120);
+			--col-controls: rgba(72, 29, 36, 1);
 		}
 
 		* {
@@ -59,8 +59,8 @@
 		margin: 8px 16px;
 		font-size: 1em;
 		min-width: 6em;
+		color: var(--color);
 		background-color: transparent;
- 		color: var(--color);
 		border: 1px solid var(--color);
 		border-radius: 5px;
 		transition: all .15s ease-in-out;
