--- a/7-tiles-3/index.html
+++ b/7-tiles-3/index.html
@@ -25,7 +25,7 @@
 				align-items: center;
 				justify-content: center;
 				height: 100vh;
-				background-color: rgb(198, 223, 255);
+				background-color: rgba(161, 205, 241, 1);
 				position: relative;
 			}
 			canvas {
