added crossers sketch

--- a/27-acrossing-2/index.html
+++ b/27-acrossing-2/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>26-acrossing</title>
+	<title>27-acrossing-2</title>
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
@@ -14,13 +14,16 @@
 
 	<style>
 		:root {
-			--col-controls: rgba(255, 205, 178,1);
+			--col-controls: rgb(251, 236, 233);
 		}
 		body {
       margin:0;
 			padding:0;
 			overflow: hidden;
-			background-color: rgb(109, 104, 117);
+			/* background-color: rgb(255, 250, 249); */
+			/* background-color: hsl(188, 25%, 11%); */
+			/* background-color: hsl(0, 60%, 5%); */
+			background-color: hsl(0, 30%, 45%);
 			display:flex;
 			align-items: center;
 			justify-content: center;
